# libdng-rust

./: .gitignore  .gitmodules  Cargo.toml  build.rs
.github/workflows/: rust.yml
src/: bindings.rs  convert.rs  exif.rs  image_info.rs  lib.rs
src/cpp/: CMakeLists.txt  DNGHandler.cpp  DNGHandler.h  JPEG_ReadMe.txt  XMP_ReadMe.txt  dng.cpp  dng.h  library.cpp  library.h  negativeProcessor.cpp  negativeProcessor.h  rawConverter.cpp  rawConverter.h  vcpkg.json  wrapper.h
src/cpp/dng_sdk/: CMakeLists.txt
src/cpp/dng_sdk/documents/doxygen/html/: annotated.html  class_auto_array-members.html  class_auto_array.html  class_auto_ptr-members.html  class_auto_ptr.html  class_preserve_stream_read_position-members.html  class_preserve_stream_read_position.html  class_s_i_m_d_traits-members.html  class_s_i_m_d_traits.html  class_s_i_m_d_traits_3_01_a_v_x2_01_4-members.html  class_s_i_m_d_traits_3_01_a_v_x2_01_4.html  class_s_i_m_d_traits_3_01_a_v_x512___s_k_x_01_4-members.html  class_s_i_m_d_traits_3_01_a_v_x512___s_k_x_01_4.html  class_s_i_m_d_traits_3_01_a_v_x_01_4-members.html  class_s_i_m_d_traits_3_01_a_v_x_01_4.html  class_s_i_m_d_traits_3_01_s_s_e2_01_4-members.html  class_s_i_m_d_traits_3_01_s_s_e2_01_4.html  class_temp_big_endian-members.html  class_temp_big_endian.html  class_temp_little_endian-members.html  class_temp_little_endian.html  class_temp_stream_sniffer-members.html  class_temp_stream_sniffer.html  classcolor__tag__set-members.html  classcolor__tag__set.html  classdng__1d__concatenate-members.html  classdng__1d__concatenate.html  classdng__1d__function-members.html  classdng__1d__function.html  classdng__1d__identity-members.html  classdng__1d__identity.html  classdng__1d__inverse-members.html  classdng__1d__inverse.html  classdng__1d__table-members.html  classdng__1d__table.html  classdng__abort__sniffer-members.html  classdng__abort__sniffer.html  classdng__area__spec-members.html  classdng__area__spec.html  classdng__area__task-members.html  (+625 more)
src/cpp/dng_sdk/documents/source/: dng_validate.doc  doxygen.cfg  mainpage.dox
src/cpp/dng_sdk/projects/mac/dng_validate.xcodeproj/: project.pbxproj
src/cpp/dng_sdk/projects/mac/xcconfig/: ValidateCommonFlags.xcconfig  ValidateDebug64.xcconfig  ValidateRelease64.xcconfig  dngsdkBuild.xcconfig  dngsdkDebug.xcconfig  dngsdkFlags.xcconfig  dngsdkRelease.xcconfig  dngsdkRoot.xcconfig  dngsdkValidateDebug.xcconfig  dngsdkValidateFlags.xcconfig  dngsdkValidateRelease.xcconfig  xmp.xcconfig
src/cpp/dng_sdk/projects/win/settings/: dngsdk32.props  dngsdk64.props  dngsdkBuild.props  dngsdkDebug.props  dngsdkFlags.props  dngsdkFullLib.props  dngsdkLib.props  dngsdkRelease.props  dngsdkRoot.props  dngsdkValidateFlags.props  dngsdkValidateTarget.props
src/cpp/dng_sdk/source/: dng_xmp_sdk.cpp
src/cpp/libjpeg/: CMakeLists.txt  makecvcx.v15  makedvcx.v15  makejvcx.v15  makervcx.v15  maketvcx.v15  makewvcx.v15
src/cpp/raw2dng/: CMakeLists.txt
src/cpp/vendorProcessors/: DNGprocessor.cpp  DNGprocessor.h  FujiProcessor.cpp  ILCE7processor.cpp  variousVendorProcessor.cpp  variousVendorProcessor.h
src/cpp/xmp_sdk/: CMakeLists.txt
src/cpp/xmp_sdk/XMPCore/source/: ExpatAdapter.cpp
src/cpp/xmp_sdk/source/: EndianUtils.hpp  Host_IO-Win.cpp
src/cpp/xmp_sdk/tools/cmake/: ReadMe.txt
