[package]
name = "libdng-rust"
version = "0.1.0"
authors = ["Christopher Schmidt <schmidtc@cs.uni-bonn.de>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[build-dependencies]
cmake = "0.1.45"
vcpkg = "0.2.11"
cargo-vcpkg = "0.1.5"

[package.metadata.vcpkg]
git = "https://github.com/microsoft/vcpkg"
rev = "e25b620"
install = ["expat", "zlib"]
