[package]
name = "dng-rs"
version = "0.1.0"
authors = ["Christopher Schmidt <schmidtc@cs.uni-bonn.de>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "libdng"
path = "src/lib.rs"

[[bin]]
name = "conv2dng"
path = "src/convert.rs"

[dependencies]
arrayvec = "0.7.0"
version = "3.0.0"
rawloader = "0.37.1"
num = "0.4.0"

[build-dependencies]
cmake = "0.1.45"

[lints]
non_upper_case_globals = "allow"